# Kitsune

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Kitsune.sln  README.md
Kitsune/: CMakeLists.txt  Kitsune.cpp  Kitsune.vcxproj  Kitsune.vcxproj.filters  ShaderCompile.bat
Kitsune/Shader/: Simple3DFrag.glsl  Simple3DFrag.spv  Simple3DVert.glsl  Simple3DVert.spv  SimpleBillboardFrag.glsl  SimpleBillboardFrag.spv  SimpleBillboardVert.glsl  SimpleBillboardVert.spv
Kitsune/Src/Core/: KitApplication.cpp  KitApplication.h  KitDefinitions.h  KitInputController.cpp  KitInputController.h  KitLogs.h  KitUtil.h
Kitsune/Src/Core/Scene/: KitGameObject.cpp  KitGameObject.h
Kitsune/Src/Core/Scene/Components/: KitLightComponents.h
Kitsune/Src/Core/System/: KitSystem.h  KitSystemManager.cpp  KitSystemManager.h
Kitsune/Src/Core/System/Subsystems/: KitResourceCache.h  KitResourceSystem.cpp  KitResourceSystem.h
Kitsune/Src/Core/System/Subsystems/Caches/: KitModelResourceCache.cpp  KitModelResourceCache.h
Kitsune/Src/Graphics/: KitCamera.cpp  KitCamera.h  KitDescriptor.cpp  KitDescriptor.h  KitEngineDevice.cpp  KitEngineDevice.h  KitGlobalGraphicsDefines.h  KitGraphicsBuffer.cpp  KitGraphicsBuffer.h  KitModel.cpp  KitModel.h  KitPipeline.cpp  KitPipeline.h  KitRenderer.cpp  KitRenderer.h  KitSwapChain.cpp  KitSwapChain.h  KitWindow.cpp  KitWindow.h
Kitsune/Src/Graphics/RenderSystems/: BasicRenderSystem.cpp  BasicRenderSystem.h  KitBasicRenderSystem.cpp  KitBasicRenderSystem.h  KitFrameInfo.h  KitGizmoBillboardRenderSystem.cpp  KitGizmoBillboardRenderSystem.h  KitRenderSystemBase.h  KitRenderSystemManager.h
